build/tmp/compileFrcUserProgramTestOsxx86-64ReleaseGoogleTestExeFrcUserProgramCpp/output.txt
See file:///Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/compileFrcUserProgramTestOsxx86-64ReleaseGoogleTestExeFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramTestOsxx86-64ReleaseGoogleTestExeFrcUserProgramCpp.
compiling Elevator.cpp failed.
In file included from /Users/brianhardell/Desktop/robotics/FRC2019/src/main/cpp/Elevator.cpp:1:
In file included from /Users/brianhardell/Desktop/robotics/FRC2019/src/main/cpp/../include/Elevator.h:5:
In file included from /Users/brianhardell/Desktop/robotics/FRC2019/src/main/include/../cpp/ElevatorMotionProfiler.cpp:8:
In file included from /Users/brianhardell/Desktop/robotics/FRC2019/src/main/include/ElevatorMotionProfiler.h:12:
/Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/expandedArchives/wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/WPILib.h:14:2: error: #warning is a language extension [-Werror,-Wpedantic]
#warning "WPILib.h is deprecated; include frc/WPILib.h instead"
 ^
/Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/expandedArchives/wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/WPILib.h:14:2: warning: "WPILib.h is deprecated; include frc/WPILib.h instead" [-W#warnings]
In file included from /Users/brianhardell/Desktop/robotics/FRC2019/src/main/cpp/Elevator.cpp:1:
/Users/brianhardell/Desktop/robotics/FRC2019/src/main/cpp/../include/Elevator.h:20:3: error: unknown type name 'TalonSRX'
  TalonSRX *talonElevator1, *talonElevator2;
  ^
/Users/brianhardell/Desktop/robotics/FRC2019/src/main/cpp/Elevator.cpp:68:24: error: unknown type name 'TalonSRX'
  talonElevator1 = new TalonSRX(TALON_ID_1);
                       ^
/Users/brianhardell/Desktop/robotics/FRC2019/src/main/cpp/Elevator.cpp:147:23: error: use of undeclared identifier 'ControlMode'
  talonElevator1->Set(ControlMode::PercentOutput, 0.0);
                      ^
/Users/brianhardell/Desktop/robotics/FRC2019/src/main/cpp/Elevator.cpp:234:49: error: no viable conversion from 'double' to 'wpi::StringRef'
  frc::SmartDashboard::PutString("ELEV VOLT: ", voltage_);
                                                ^~~~~~~~
/Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/expandedArchives/wpiutil-cpp-2019.1.1-headers.zip_09b38849dbdfa883c4be908731924be2/wpi/StringRef.h:49:9: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'double' to 'const wpi::StringRef &' for 1st argument
  class StringRef {
        ^
/Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/expandedArchives/wpiutil-cpp-2019.1.1-headers.zip_09b38849dbdfa883c4be908731924be2/wpi/StringRef.h:49:9: note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'double' to 'wpi::StringRef &&' for 1st argument
/Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/expandedArchives/wpiutil-cpp-2019.1.1-headers.zip_09b38849dbdfa883c4be908731924be2/wpi/StringRef.h:81:5: note: candidate constructor not viable: no known conversion from 'double' to 'std::nullptr_t' (aka 'nullptr_t') for 1st argument
    StringRef(std::nullptr_t) = delete;
    ^
/Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/expandedArchives/wpiutil-cpp-2019.1.1-headers.zip_09b38849dbdfa883c4be908731924be2/wpi/StringRef.h:85:18: note: candidate constructor not viable: no known conversion from 'double' to 'const char *' for 1st argument
    /*implicit*/ StringRef(const char *Str)
                 ^
/Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/expandedArchives/wpiutil-cpp-2019.1.1-headers.zip_09b38849dbdfa883c4be908731924be2/wpi/StringRef.h:95:18: note: candidate constructor not viable: no known conversion from 'double' to 'const std::string &' (aka 'const basic_string<char, char_traits<char>, allocator<char> > &') for 1st argument
    /*implicit*/ StringRef(const std::string &Str)
                 ^
/Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/expandedArchives/wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/frc/smartdashboard/SmartDashboard.h:198:64: note: passing argument to parameter 'value' here
  static bool PutString(wpi::StringRef keyName, wpi::StringRef value);
                                                               ^
/Users/brianhardell/Desktop/robotics/FRC2019/src/main/cpp/Elevator.cpp:235:23: error: use of undeclared identifier 'ControlMode'
  talonElevator1->Set(ControlMode: PercentOutput, voltage_);
                      ^
/Users/brianhardell/Desktop/robotics/FRC2019/src/main/cpp/Elevator.cpp:244:53: error: no viable conversion from 'std::__1::map<int, std::__1::basic_string<char>, std::__1::less<int>, std::__1::allocator<std::__1::pair<const int, std::__1::basic_string<char> > > >::mapped_type' (aka 'std::__1::basic_string<char>') to 'double'
  frc::SmartDashboard::PutNumber("ElevatorState: ", elev_state[current_state]);
                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/string:823:5: note: candidate function
    operator __self_view() const _NOEXCEPT { return __self_view(data(), size()); }
    ^
/Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/expandedArchives/wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/frc/smartdashboard/SmartDashboard.h:167:56: note: passing argument to parameter 'value' here
  static bool PutNumber(wpi::StringRef keyName, double value);
                                                       ^
1 warning and 7 errors generated.

compiling ElevatorMotionProfiler.cpp failed.
In file included from /Users/brianhardell/Desktop/robotics/FRC2019/src/main/cpp/ElevatorMotionProfiler.cpp:8:
In file included from /Users/brianhardell/Desktop/robotics/FRC2019/src/main/include/ElevatorMotionProfiler.h:12:
/Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/expandedArchives/wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/WPILib.h:14:2: error: #warning is a language extension [-Werror,-Wpedantic]
#warning "WPILib.h is deprecated; include frc/WPILib.h instead"
 ^
/Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/expandedArchives/wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/WPILib.h:14:2: warning: "WPILib.h is deprecated; include frc/WPILib.h instead" [-W#warnings]
1 warning and 1 error generated.

compiling robot.cpp successful.

Finished compileFrcUserProgramTestOsxx86-64ReleaseGoogleTestExeFrcUserProgramCpp, see full log file:///Users/brianhardell/Desktop/robotics/FRC2019/build/tmp/compileFrcUserProgramTestOsxx86-64ReleaseGoogleTestExeFrcUserProgramCpp/output.txt.
